<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/pingEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789."
        android:ems="10"
        android:hint="@string/ip" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/pingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ping" />

    <Spinner
        android:id="@+id/pingSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/pingSpinnerInterfaces" />

    <TextView
        android:id="@+id/pingTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>